@@ -414,6 +414,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("integer->char"),
         SA("interesting-to-quasiquote?"),
         SA("internal-define->letrec"),
+        SA("irritants"),
         SA("it"),
         SA("iter"),
         SA("j"),
@@ -530,6 +531,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("memq"),
         SA("memv"),
         SA("merge-libname-sym"),
+        SA("message"),
         SA("meta"),
         SA("mod"),
         SA("mode"),
@@ -867,6 +869,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("top level :$:$SEQ"),
         SA("top level :$:$UNDEF"),
         SA("top level :$:$asm"),
+        SA("top level :$:$assertion-violation"),
         SA("top level :$:$call"),
         SA("top level :$:$call-cc"),
         SA("top level :$:$const"),
@@ -903,6 +906,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("top level :$:alist-cons"),
         SA("top level :$:apply-each-pair"),
         SA("top level :$:argcount-ok?"),
+        SA("top level :$:assertion-violation"),
         SA("top level :$:assoc"),
         SA("top level :$:assoc-ref"),
         SA("top level :$:assq"),
@@ -1315,6 +1319,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("void"),
         SA("vt"),
         SA("when"),
+        SA("who"),
         SA("with-exception-handler"),
         SA("with-input-from-file"),
         SA("write"),
