@@ -5,3 +5,4 @@ test:
 	$(MOSH) -b tests/r6rs/run/contrib.sps
 	$(MOSH) -b tests/r6rs/run/programs.sps
 	$(MOSH) -b tests/r6rs/run/control.sps
+	$(MOSH) -b tests/r6rs/run/hashtables.sps
